Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23440

mysql_tzinfo_to_sql under innodb is slow

    XMLWordPrintable

Details

    Description

      When MDEV-18778 added ENGINE=InnoDB to allow timezone to be replicated via galera the obvious extension of wrapping the inserts in a transaction was missed.

      As a result an innodb initialization in a stand alone mode takes ~27 seconds instead of 1.2 seconds (timing per MDEV-23326)

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: